--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.0"
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
